[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Textures/waterfundo.png" type="Texture" id=1]
[ext_resource path="res://Ui/boat.png" type="Texture" id=2]
[ext_resource path="res://Ui/mouse/mouse.tscn" type="PackedScene" id=3]
[ext_resource path="res://Ui/Volume.tscn" type="PackedScene" id=4]
[ext_resource path="res://Ui/fonts/Text_Font.tres" type="DynamicFont" id=5]
[ext_resource path="res://exports card/ui-03.png" type="Texture" id=6]
[ext_resource path="res://Ui/Play.gd" type="Script" id=7]
[ext_resource path="res://Ui/Quit Game.tscn" type="PackedScene" id=8]
[ext_resource path="res://sound/music-ogg/Track_5.ogg" type="AudioStream" id=9]
[ext_resource path="res://Ui/ShortStack-Regular.otf" type="DynamicFontData" id=10]

[sub_resource type="VisualShaderNodeTexture" id=1]
output_port_for_preview = 0
texture = ExtResource( 1 )

[sub_resource type="VisualShaderNodeInput" id=2]
input_name = "uv"

[sub_resource type="VisualShader" id=3]
code = "shader_type canvas_item;
uniform sampler2D tex_frg_3;


void vertex() {
// Output:0

}

void fragment() {
// Input:4
	vec3 n_out4p0;
	n_out4p0 = vec3(UV,0.0);

// Texture:3
	vec3 n_out3p0;
	float n_out3p1;
	vec4 tex_frg_3_read = texture( tex_frg_3 , n_out4p0.xy );
	n_out3p0 = tex_frg_3_read.rgb;
	n_out3p1 = tex_frg_3_read.a;

// Output:0
	COLOR.rgb = n_out3p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( 56.006, -24.0354 )
mode = 1
flags/light_only = false
nodes/vertex/0/position = Vector2( 560, 100 )
nodes/fragment/0/position = Vector2( 980, 60 )
nodes/fragment/3/node = SubResource( 1 )
nodes/fragment/3/position = Vector2( 800, 60 )
nodes/fragment/4/node = SubResource( 2 )
nodes/fragment/4/position = Vector2( 639.006, 204.465 )
nodes/fragment/connections = PoolIntArray( 3, 0, 0, 0, 4, 0, 3, 0 )

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )

[sub_resource type="Theme" id=5]
default_font = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=7]
size = 22
font_data = ExtResource( 10 )

[sub_resource type="Animation" id=8]
resource_name = "scroll"
length = 20.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect2:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 20 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1024, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 20 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1024, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureRect:rect_rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 4.9, 15, 20 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.05829, -1.9865, 0.0 ]
}

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -951.338
margin_right = -951.338

[node name="ColorRect2" type="ColorRect" parent="."]
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 72.6625
margin_right = 72.6624

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -270.0
margin_top = -270.0
margin_right = 272.0
margin_bottom = 272.0
rect_rotation = -0.563844
rect_pivot_offset = Vector2( 261.431, 246.921 )
texture = ExtResource( 2 )

[node name="mouse" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 0 )

[node name="Volume" parent="." instance=ExtResource( 4 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -157.549
margin_top = 25.3604
margin_right = -20.5491
margin_bottom = 41.3604
theme = SubResource( 5 )
min_value = 40.0
step = 10.0

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -253.0
margin_top = -164.0
margin_right = 253.0
grow_horizontal = 0
grow_vertical = 0

[node name="Play" type="TextureButton" parent="Control"]
margin_right = 247.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 123, 49 )
texture_normal = ExtResource( 6 )
script = ExtResource( 7 )
level = "res://Lvls/Main-Lvl.tscn"

[node name="Quit Game" parent="Control" instance=ExtResource( 8 )]
rect_pivot_offset = Vector2( 123, 53 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 9 )
autoplay = true

[node name="Label" type="Label" parent="."]
margin_left = 25.6248
margin_top = 25.6248
margin_right = 272.625
margin_bottom = 137.625
custom_fonts/font = SubResource( 6 )
text = "Code: Galo
Game Design: Caroldot
Art & Ui:Tunadel
Music & SFX:Scowsh
Translation: Igor Carna√∫ba"

[node name="fundo" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )

[node name="Label2" type="Label" parent="fundo"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.0
margin_top = -21.5
margin_right = 151.0
margin_bottom = 21.5
custom_fonts/font = ExtResource( 5 )
text = "Created For:
"
align = 1

[node name="Label" type="Label" parent="fundo"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -219.0
margin_top = -29.5
margin_right = 219.0
margin_bottom = 29.5
custom_fonts/font = SubResource( 7 )
text = "
AFGRAL GAMEDEV COMPETITION 2019"
align = 1

[node name="Control" type="Control" parent="fundo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -268.0
margin_top = -94.0
margin_right = 268.0
margin_bottom = 94.0

[node name="Label3" type="Label" parent="fundo/Control"]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -219.0
margin_right = 219.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 7 )
text = "Created by:"
align = 1

[node name="Label4" type="Label" parent="fundo/Control"]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -219.0
margin_top = -14.0
margin_right = 219.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 7 )
text = "Caroldot"
align = 1

[node name="Label5" type="Label" parent="fundo/Control"]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -220.228
margin_top = 40.5154
margin_right = 217.772
margin_bottom = 68.5154
custom_fonts/font = SubResource( 7 )
text = "Galo"
align = 1

[node name="Label6" type="Label" parent="fundo/Control"]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -219.0
margin_top = 27.7431
margin_right = 219.0
margin_bottom = 55.7431
custom_fonts/font = SubResource( 7 )
text = "Tunadel"
align = 1

[node name="Label7" type="Label" parent="fundo/Control"]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -219.0
margin_top = -28.0
margin_right = 219.0
custom_fonts/font = SubResource( 7 )
text = "Scowsh"
align = 1

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
autoplay = "scroll"
anims/scroll = SubResource( 8 )

[connection signal="button_down" from="Control/Play" to="Control/Play" method="_on_Button_button_down"]
[connection signal="mouse_entered" from="Control/Play" to="Control/Play" method="_on_Play_mouse_entered"]
[connection signal="mouse_exited" from="Control/Play" to="Control/Play" method="_on_Play_mouse_exited"]
[connection signal="mouse_entered" from="Control/Quit Game" to="Control/Quit Game" method="_on_Quit_Game_mouse_entered"]
[connection signal="mouse_exited" from="Control/Quit Game" to="Control/Quit Game" method="_on_Quit_Game_mouse_exited"]
